--- a/.k8s-config/molecule-deployment.yml
+++ b/.k8s-config/molecule-deployment.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: molecule-frontend
-  namespace: molecule-_APP_
+  namespace: _NAMESPACE_
   labels:
     app: molecule-frontend
 spec:
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: _TAG_
-          image: registry.gitlab.com/linumlabs/molecule-sandbox/release/molecule-frontend:_TAG_
+          image: registry.gitlab.com/linumlabs/molecule-alpha/release/molecule-frontend:_TAG_
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -33,7 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: molecule-frontend
-  namespace: molecule-_APP_
+  namespace: _NAMESPACE_
   labels:
     app: molecule-frontend
     date: _DATE_
@@ -51,7 +51,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: molecule-backend 
-  namespace: molecule-_APP_
+  namespace: _NAMESPACE_
   labels:
     app: molecule-backend
 spec:
@@ -69,7 +69,7 @@ spec:
     spec:
       containers:
         - name: _TAG_
-          image: registry.gitlab.com/linumlabs/molecule-sandbox/release/molecule-backend:_TAG_
+          image: registry.gitlab.com/linumlabs/molecule-alpha/release/molecule-backend:_TAG_
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
@@ -86,7 +86,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: molecule-backend
-  namespace: molecule-_APP_
+  namespace: _NAMESPACE_
   labels:
     app: molecule-backend
     date: _DATE_
