Update wsrun syntax

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "molecule-alpha-api",
-      "molecule-alpha-webapp",
-      "molecule-alpha-blockchain"
+      "ApiServer",
+      "WebApp",
+      "Blockchain"
     ],
     "nohoist": [
       "**/*"
@@ -33,7 +33,7 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "precommit": "^1.2.2",
-    "wsrun": "3.6.5"
+    "wsrun": "^3.6.5"
   },
   "resolutions": {
     "**/hoist-non-react-statics": "3.3.0"
