--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ethInit": "etherlime init",
     "start": "etherlime ganache",
     "start:devnets": "docker image pull yodascholtz/parity-ubuntu:latest && docker run -p 8545:8545 yodascholtz/parity-ubuntu:latest",
     "build": "etherlime compile",
@@ -20,7 +21,7 @@
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
     "dotenv": "8.0.0",
-    "etherlime": "BenSchZA/etherlime#temp-feature",
+    "etherlime": "github:BenSchZA/etherlime#temp-feature",
     "ethers": "4.0.31",
     "openzeppelin-solidity": "2.3.0",
     "solc": "0.5.10"
