Sort out all basic routing and page layout

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -22,6 +22,7 @@ MONGO_PASSWORD=
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=apidb
+# MONGO_AUTH_SOURCE=
 
 #
 # BCRYPT
@@ -42,9 +43,16 @@ JWT_EXPIRY=1
 # Use 'jsonRpcProvider' | 'default'
 ETHERS_PROVIDER=jsonRpcProvider
 # Only applicable when using the 'default' above. Use 'homestead' | 'rinkeby' | 'ropsten' | 'kovan'
-ETHERS_NETWORK=ropsten
+ETHERS_NETWORK=rinkeby
 # Only applicable when using the 'jsonRpcProvider' above.
 ETHERS_RPC_PROVIDER_URL=http://localhost:8545
+
+
+#
+# Wallet Details (0x7bebab489dd0baaa24630ad41885ed0cdb7a6dd5)
+#
+APPLICATION_WALLET_PRIVATE_KEY= ADMIN_ACCOUNT_KEY 
+APPLICATION_WALLET_MNEMONIC= ADMIN_ACCOUNT_MNEMONIC
 
 #
 # GraphQL
