WIP Added factory documentation + code fixes + commenting

--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -11,7 +11,7 @@
     "deploy:rinkeby": "etherlime deploy --network=rinkeby --runs=500",
     "deploy:rinkeby:debug": "node --inspect-brk ./node_modules/etherlime/cli.js --timeout 30000 deploy --network=rinkeby --runs=50",
     "test": "yarn build && etherlime test --skip-compilation=true  --runs=999 --timeout=10000ms --gas-report=true",
-    "buildntest": "etherlime compile  --runs=999 && etherlime test --skip-compilation=true  --runs=999 --timeout=10000ms --gas-report=true",
+    "buildntest": "etherlime compile  --runs=999",
     "test-debug": "node --inspect-brk ./node_modules/etherlime/cli.js test --timeout 100000",
     "test-debug-idea": "node $NODE_DEBUG_OPTION ./node_modules/etherlime/cli.js test --timeout 100000"
   },
