Resolve "Creator Application Form"

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -55,6 +55,11 @@ APPLICATION_WALLET_PRIVATE_KEY= ADMIN_ACCOUNT_KEY
 APPLICATION_WALLET_MNEMONIC= ADMIN_ACCOUNT_MNEMONIC
 
 #
+# Sendgrid API Key
+#
+SENDGRID_API=YOUR_SENDGRID_API_KEY
+
+#
 # GraphQL
 #
 # GRAPHQL_ENABLED=true
