--- a/Blockchain/npm-package/package.json
+++ b/Blockchain/npm-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@molecule-protocol/catalyst-contracts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Molecule protocol contracts",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,6 @@
     "README.md"
   ],
   "dependencies": {
-    "etherlime": "^2.1.7",
-    "require-all": "^3.0.0"
+    "etherlime": "^2.1.7"
   }
 }
