--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -67,6 +67,7 @@
     "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "rxjs": "^6.4.0",
+    "sharp": "^0.23.0",
     "streamifier": "^0.1.1",
     "ts-node": "^8.1.0",
     "typescript": "^3.0.1",
@@ -83,6 +84,7 @@
     "@types/mongodb-uri": "0.9.0",
     "@types/mongoose": "5.5.6",
     "@types/node": "^10.7.1",
+    "@types/sharp": "^0.22.2",
     "@types/supertest": "2.0.7",
     "jest": "24.8.0",
     "nodemon": "1.19.1",
