Update registry details

--- a/.envrc
+++ b/.envrc
@@ -4,4 +4,6 @@ API_HOST=localhost:3001/api
 API_SCHEMA=http
 APM_SERVICE_NAME=molecule-frontend-alpha-nightly
 APM_SERVER_ENDPOINT=https://apm.mol.ai
+REGISTRY=540682145059.dkr.ecr.us-west-2.amazonaws.com
+NIX_PATH="nixpkgs=https://github.com/NixOS/nixpkgs/archive/19.03.tar.gz"
 set +a
