--- a/.gitlab-ci-deploy.yml
+++ b/.gitlab-ci-deploy.yml
@@ -1,41 +1,34 @@
-# If build passses tests, push to release CR
+# If build passes tests, push to release CR
 docker-build:
   stage: docker-build
-  image: registry.gitlab.com/linumlabs/molecule-alpha/build/docker-env:latest
-  services: 
+  image: $REGISTRY/linumlabs/molecule-alpha/build/docker-env:latest
+  services:
     - docker:dind
+  variables:
+    PROJECT_NAME: $CI_PROJECT_NAME
+    BRANCH_NAME: $CI_BUILD_REF_NAME
   before_script:
     - echo "Starting Docker build stage..."
     - echo "Override global 'before_script'"
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker-compose -v
-    # - docker-compose pull || true
-    - docker-compose build builder
-    - docker-compose build apiserver
-    - docker-compose build webapp
-    - docker-compose up -d
-    - docker-compose down
-    - docker-compose push
+    - .environments/deployment/build.sh
   only:
     - nightly
-    - staging
 
 deploy:
   stage: deploy
-  image: registry.gitlab.com/linumlabs/molecule-alpha/build/k8s-env:latest
-  environment:
-    name: $CI_BUILD_REF_NAME
+  environment: production
+  image: $REGISTRY/linumlabs/molecule-alpha/build/nix-build-env:latest
   variables:
     CLUSTER: AmazonEKS_LinumLabs_Spot
-    NAMESPACE: molecule-alpha-$CI_BUILD_REF_NAME
+    PROJECT_NAME: $CI_PROJECT_NAME
+    BRANCH_NAME: $CI_BUILD_REF_NAME
   before_script:
     - echo "Starting deploy stage..."
     - echo "Override global 'before_script'"
   script:
-    - .gitlab-ci-scripts/configure-k8s.sh
-    - sed 's/_NAMESPACE_/'"$NAMESPACE"'/g; s/_TAG_/'"$CI_BUILD_REF_NAME"'/g; s/_DATE_/'\"$(date +'%s')\"'/g' ./.k8s-config/molecule-deployment.yml > kubernetes.yml;
-    - kubectl apply -f kubernetes.yml
+    - nix-shell .environments/shell.nix
+    - .environments/scripts/configure-k8s.sh
+    - .environments/deployment/deploy.sh
   only:
     - nightly
-    - staging
