--- a/.gitlab-ci-test.yml
+++ b/.gitlab-ci-test.yml
@@ -86,34 +86,34 @@ test:staging_monorepo:
   script:
     - .environments/tests/mono-test.sh
     
-merge:to_master:
-  stage: merge
-  only:
-    - nightly
-  script:
-    - .environments/scripts/configure-git.sh
-    - git checkout master
-    - git merge origin/nightly
-    - git push
+# merge:to_master:
+#   stage: merge
+#   only:
+#     - nightly
+#   script:
+#     - .environments/scripts/configure-git.sh
+#     - git checkout master
+#     - git merge origin/nightly
+#     - git push
 
-merge:to_staging:
-  stage: merge
-  extends: .push_deploy
-  only:
-    - master
-  script:
-    - .environments/scripts/configure-git.sh
-    - git checkout staging
-    - git merge origin/master
-    - git push
+# merge:to_staging:
+#   stage: merge
+#   extends: .push_deploy
+#   only:
+#     - master
+#   script:
+#     - .environments/scripts/configure-git.sh
+#     - git checkout staging
+#     - git merge origin/master
+#     - git push
 
-merge:to_production:
-  stage: merge
-  extends: .push_deploy
-  only:
-    - staging
-  script:
-    - .environments/scripts/configure-git.sh
-    - git checkout production
-    - git merge origin/staging
-    - git push
+# merge:to_production:
+#   stage: merge
+#   extends: .push_deploy
+#   only:
+#     - staging
+#   script:
+#     - .environments/scripts/configure-git.sh
+#     - git checkout production
+#     - git merge origin/staging
+#     - git push
