Feature/env example update

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -49,15 +49,21 @@ ETHERS_RPC_PROVIDER_URL=http://localhost:8545
 
 
 #
-# Wallet Details (0x7bebab489dd0baaa24630ad41885ed0cdb7a6dd5)
+# Wallet Details: the wallet must be an admin
 #
-APPLICATION_WALLET_PRIVATE_KEY= ADMIN_ACCOUNT_KEY 
-APPLICATION_WALLET_MNEMONIC= ADMIN_ACCOUNT_MNEMONIC
+APPLICATION_WALLET_PRIVATE_KEY=
+
+#
+# Contracts: latest Rinkeby deployment as example
+#
+PDAI_CONTRACT_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
+MARKET_REGISTRY_ADDRESS=0x3458f1801011732cdd0239d24dF9499fB958817C
+MARKET_FACTORY_ADDRESS=0xE6BAB70225B5404D7Fd79218d39b767AbF808875
 
 #
 # Sendgrid API Key
 #
-SENDGRID_API=YOUR_SENDGRID_API_KEY
+SENDGRID_API=
 
 #
 # GraphQL
