--- a/WebApp/.env.example
+++ b/WebApp/.env.example
@@ -1,18 +1,22 @@
 #
 # APPLICATION
 #
-APP_NAME=Molecule-Alpha-WebApp
+APP_NAME=molecule
 APP_SCHEMA=http
 APP_HOST=localhost
 APP_PORT=3000
 API_HOST=localhost:3001/api
 
-MAINNET_DAI_ADDRESS=0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359
-GOERLI_DAI_ADDRESS=0x47bCAeA99942eCbf5e4d0b0C82D8fec5854810b3
-RINKEBY_DAI_ADDRESS=0xb5947cFD299a4bB5a749AA18A8D1a41353B52332
-KOVAN_DAI_ADDRESS=0x47bCAeA99942eCbf5e4d0b0C82D8fec5854810b3
-ROPSTEN_DAI_ADDRESS=0x3f05e5D250FE1A294c665E970513a36D7E2F3230
+MAINNET_DAI_ADDRESS=
+GOERLI_DAI_ADDRESS=
+RINKEBY_DAI_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
+KOVAN_DAI_ADDRESS=
+ROPSTEN_DAI_ADDRESS=
 
-MARKET_REGISTRY_ADDRESS=
-MARKET_FACTORY_ADDRESS=
-LOCAL_CHAIN_ID=1565689489989
+PDAI_CONTRACT_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
+MARKET_REGISTRY_ADDRESS=0x3458f1801011732cdd0239d24dF9499fB958817C
+MARKET_FACTORY_ADDRESS=0xE6BAB70225B5404D7Fd79218d39b767AbF808875
+
+# Set for local dev on Ganache
+LOCAL_DAI_ADDRESS=
+LOCAL_CHAIN_ID=
