--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -55,6 +55,7 @@
     "ethers": "^4.0.20",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.15",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.4.19",
     "mongoose-gridfs": "^0.6.2",
@@ -64,6 +65,7 @@
     "passport-jwt": "^4.0.0",
     "prom-client": "^11.3.0",
     "prometheus-api-metrics": "^2.2.2",
+    "redux": "^4.0.4",
     "reflect-metadata": "0.1.13",
     "request": "^2.88.0",
     "rimraf": "^2.6.2",
@@ -71,6 +73,7 @@
     "sharp": "^0.23.0",
     "streamifier": "^0.1.1",
     "ts-node": "^8.1.0",
+    "typesafe-actions": "^4.4.2",
     "typescript": "^3.0.1",
     "winston": "^3.1.0"
   },
