--- a/WebApp/.env.example
+++ b/WebApp/.env.example
@@ -7,16 +7,8 @@ APP_HOST=localhost
 APP_PORT=3000
 API_HOST=localhost:3001/api
 
-MAINNET_DAI_ADDRESS=
-GOERLI_DAI_ADDRESS=
-RINKEBY_DAI_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
-KOVAN_DAI_ADDRESS=
-ROPSTEN_DAI_ADDRESS=
+CHAIN_ID=
 
-PDAI_CONTRACT_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
-MARKET_REGISTRY_ADDRESS=0x3458f1801011732cdd0239d24dF9499fB958817C
-MARKET_FACTORY_ADDRESS=0xE6BAB70225B5404D7Fd79218d39b767AbF808875
-
-# Set for local dev on Ganache
-LOCAL_DAI_ADDRESS=
-LOCAL_CHAIN_ID=
+DAI_CONTRACT_ADDRESS=
+MARKET_REGISTRY_ADDRESS=
+MARKET_FACTORY_ADDRESS=
