Hotfix: Env variable updates

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -56,9 +56,9 @@ APPLICATION_WALLET_PRIVATE_KEY=
 #
 # Contracts: latest Rinkeby deployment as example
 #
-DAI_CONTRACT_ADDRESS=0x231842628F0eC39887EB2Fe95f52C7Fa2DABf56c
-MARKET_REGISTRY_ADDRESS=0x3458f1801011732cdd0239d24dF9499fB958817C
-MARKET_FACTORY_ADDRESS=0xE6BAB70225B5404D7Fd79218d39b767AbF808875
+DAI_CONTRACT_ADDRESS=
+MARKET_REGISTRY_ADDRESS=
+MARKET_FACTORY_ADDRESS=
 
 #
 # Sendgrid API Key
