Hotfix: Update env example and Nix deps

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -41,7 +41,7 @@ JWT_EXPIRY=1
 # ETHERS Provider
 #
 # Use 'jsonRpcProvider' | 'default'
-ETHERS_PROVIDER=jsonRpcProvider
+ETHERS_PROVIDER=default
 # Only applicable when using the 'default' above. Use 'homestead' | 'rinkeby' | 'ropsten' | 'kovan'
 ETHERS_NETWORK=rinkeby
 # Only applicable when using the 'jsonRpcProvider' above.
