--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "etherlime ganache",
-    "build": "etherlime compile --runs=999",
+    "start": "etherlime ganache --networkId=1337",
+    "build": "etherlime compile --runs=999 --exportAbi",
     "deploy:local": "etherlime deploy --runs=500",
     "deploy:rinkeby": "etherlime deploy --network=rinkeby --runs=500",
     "deploy:rinkeby:debug": "node --inspect-brk ./node_modules/etherlime/cli.js --timeout 30000 deploy --network=rinkeby --runs=50",
-    "test": "etherlime test --skip-compilation=true --output=none --timeout 100000 --gas-report=true --runs=999",
+    "test": "etherlime test --output=none --timeout 100000 --gas-report=true --runs=999",
+    "test-one": "etherlime test test/vault/stress.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-debug": "node --inspect-brk ./node_modules/etherlime/cli.js test --timeout 100000ms",
     "test-debug-idea": "node $NODE_DEBUG_OPTION ./node_modules/etherlime/cli.js test --timeout 100000"
   },
