--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -12,15 +12,16 @@
     "test": "etherlime test --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-one": "etherlime test test/vault/stress.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-debug": "node --inspect-brk ./node_modules/etherlime/cli.js test --timeout 100000ms",
-    "test-debug-idea": "node $NODE_DEBUG_OPTION ./node_modules/etherlime/cli.js test --timeout 100000"
+    "test-debug-idea": "node $NODE_DEBUG_OPTION ./node_modules/etherlime/cli.js test --timeout 100000",
+    "eth-ver": "etherlime --help"
   },
   "author": "Linum Labs",
   "license": "MIT",
   "dependencies": {
     "bignumber.js": "^9.0.0",
     "dotenv": "8.0.0",
-    "etherlime": "^2.2.0",
-    "etherlime-lib": "^1.1.3",
+    "etherlime": "2.2.0",
+    "etherlime-lib": "1.1.3",
     "ethers": "4.0.31",
     "openzeppelin-solidity": "2.3.0",
     "solc": "0.5.10"
