--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -90,6 +90,7 @@
     "minimist": "^1.2.0",
     "node-loader": "^0.6.0",
     "normalizr": "^3.3.0",
+    "notistack": "^0.9.0",
     "prop-types": "15.7.2",
     "query-string": "^6.8.2",
     "react": "16.8.6",
