replace with mol spinner

--- a/WebApp/tsconfig.json
+++ b/WebApp/tsconfig.json
@@ -30,7 +30,8 @@
     "pretty": true,
     "removeComments": true,
     "sourceMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "exclude": [
       "node_modules", 
