--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -97,6 +97,7 @@
     "react-blockies": "^1.4.1",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
+    "react-lottie": "^1.2.3",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "react-svg": "^10.0.11",
