--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -13,12 +13,12 @@
     "test-one": "etherlime test test/moleculeVault/moleculeVault.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-debug": "node --inspect-brk ./node_modules/etherlime/cli.js test --timeout 100000ms",
     "test-debug-idea": "node $NODE_DEBUG_OPTION ./node_modules/etherlime/cli.js test --timeout 100000",
-    "eth-ver": "etherlime --help"
+    "eth-ver": "etherlime flatten vault/Vault.sol"
   },
   "author": "Linum Labs",
   "license": "MIT",
   "dependencies": {
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.0",
     "dotenv": "8.0.0",
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
