--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -74,7 +74,7 @@
     "streamifier": "^0.1.1",
     "ts-node": "^8.1.0",
     "typesafe-actions": "^4.4.2",
-    "typescript": "^3.0.1",
+    "typescript": "^3.7.0-beta",
     "winston": "^3.1.0"
   },
   "devDependencies": {
