--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -45,6 +45,7 @@
     "@nestjs/platform-socket.io": "6.3.2",
     "@nestjs/terminus": "6.3.3",
     "@nestjs/websockets": "^6.0.0",
+    "@panterazar/ethers": "^4.0.37",
     "@panterazar/nestjs-prom": "0.0.5",
     "bcrypt": "^3.0.4",
     "class-transformer": "0.2.3",
@@ -52,7 +53,6 @@
     "compression": "^1.7.3",
     "csurf": "^1.9.0",
     "dotenv": "^6.1.0",
-    "ethers": "^4.0.20",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.15",
