--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -66,6 +66,7 @@
     "@material-ui/core": "4.0.1",
     "@material-ui/icons": "4.0.1",
     "@molecule-protocol/catalyst-contracts": "^0.0.12",
+    "@panterazar/ethers": "^4.0.37",
     "chalk": "2.4.2",
     "clsx": "^1.0.4",
     "compression": "1.7.4",
@@ -75,7 +76,6 @@
     "dayjs": "^1.8.12",
     "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
-    "ethers": "^4.0.27",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
     "formik": "1.5.8",
