--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -98,8 +98,10 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-lottie": "^1.2.3",
+    "react-markdown": "^4.2.2",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-simplemde-editor": "^4.1.0",
     "react-svg": "^10.0.11",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
