--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -45,7 +45,7 @@
     "@nestjs/platform-socket.io": "6.3.2",
     "@nestjs/terminus": "6.3.3",
     "@nestjs/websockets": "^6.0.0",
-    "@panterazar/ethers": "^4.0.37",
+    "ethers": "4.0.38",
     "@panterazar/nestjs-prom": "0.0.5",
     "bcrypt": "^3.0.4",
     "class-transformer": "0.2.3",
