--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -66,7 +66,7 @@
     "@material-ui/core": "4.0.1",
     "@material-ui/icons": "4.0.1",
     "@molecule-protocol/catalyst-contracts": "^0.0.12",
-    "@panterazar/ethers": "^4.0.37",
+    "ethers": "4.0.38",
     "chalk": "2.4.2",
     "clsx": "^1.0.4",
     "compression": "1.7.4",
