--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -42,10 +42,9 @@
     "@nestjs/mongoose": "6.1.2",
     "@nestjs/passport": "6.1.0",
     "@nestjs/platform-express": "6.3.2",
-    "@nestjs/platform-socket.io": "6.3.2",
+    "@nestjs/platform-socket.io": "^6.8.3",
     "@nestjs/terminus": "6.3.3",
-    "@nestjs/websockets": "^6.0.0",
-    "ethers": "4.0.38",
+    "@nestjs/websockets": "^6.8.3",
     "@panterazar/nestjs-prom": "0.0.5",
     "bcrypt": "^3.0.4",
     "class-transformer": "0.2.3",
@@ -53,6 +52,7 @@
     "compression": "^1.7.3",
     "csurf": "^1.9.0",
     "dotenv": "^6.1.0",
+    "ethers": "4.0.38",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.15",
@@ -71,6 +71,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.4.0",
     "sharp": "^0.23.0",
+    "socket.io": "^2.3.0",
     "streamifier": "^0.1.1",
     "ts-node": "^8.1.0",
     "typesafe-actions": "^4.4.2",
@@ -89,6 +90,7 @@
     "@types/mongoose": "5.5.6",
     "@types/node": "^10.7.1",
     "@types/sharp": "^0.22.2",
+    "@types/socket.io": "^2.1.4",
     "@types/supertest": "2.0.7",
     "jest": "24.8.0",
     "nodemon": "1.19.1",
