--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -63,6 +63,10 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "@elastic/apm-rum": "^4.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "4.0.1",
     "@material-ui/icons": "4.0.1",
     "@molecule-protocol/catalyst-contracts": "^0.0.13",
