--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -69,7 +69,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "4.0.1",
     "@material-ui/icons": "4.0.1",
-    "@molecule-protocol/catalyst-contracts": "^0.0.13",
+    "@molecule-protocol/catalyst-contracts": "0.0.14",
     "chalk": "2.4.2",
     "clsx": "^1.0.4",
     "compression": "1.7.4",
