Resolve "Staging deployment"

--- a/Blockchain/.env.example
+++ b/Blockchain/.env.example
@@ -1,8 +1,14 @@
 # Deployer private key used for all networks
 DEPLOYER_PRIVATE_KEY=
+
+# Account  that will be added as Admin on the contracts
 ADMIN_PUBLIC_KEY=
-ETHERSCAN_API_KEY=
+
+# Account that will be able to deploy markets
 BACKEND_DEPLOYER_PUBLIC_KEY=
+
+# API Key used for Etherscan contract verification
+ETHERSCAN_API_KEY=
 
 # Rinkeby variables 
 INFURA_API_KEY_RINKEBY=
