--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "bignumber.js": "9.0.0",
     "dotenv": "8.0.0",
-    "etherlime": "2.2.0",
+    "etherlime": "^2.2.4",
     "etherlime-lib": "1.1.3",
     "ethers": "4.0.31",
     "openzeppelin-solidity": "2.3.0",
