Create production deployment environment

--- a/.gitlab-ci-deploy.yml
+++ b/.gitlab-ci-deploy.yml
@@ -12,6 +12,7 @@ docker-build:
   only:
     - nightly
     - staging
+    - production
 
 deploy:
   stage: deploy
@@ -28,3 +29,4 @@ deploy:
   only:
     - nightly
     - staging
+    - production
