Resolve "Make logging env variables optional for development"

--- a/ApiServer/.env.example
+++ b/ApiServer/.env.example
@@ -13,6 +13,11 @@ APP_BANNER=true
 #
 LOG_LEVEL=debug
 LOG_OUTPUT=dev
+SENTRY_DSN=
+APM_SERVER_ENDPOINT=
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_CLOUD_ID=
+ELASTICSEARCH_PASSWORD=
 
 #
 # MONGODB
