--- a/ApiServer/package.json
+++ b/ApiServer/package.json
@@ -77,7 +77,7 @@
     "streamifier": "^0.1.1",
     "ts-node": "^8.1.0",
     "typesafe-actions": "^4.4.2",
-    "typescript": "^3.7.0-beta",
+    "typescript": "3.7.2",
     "winston": "^3.1.0",
     "winston-elasticsearch": "^0.8.2"
   },
