Resolve "Analytics: Add GA to app pages"

--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -102,6 +102,7 @@
     "react-blockies": "^1.4.1",
     "react-device-detect": "^1.9.10",
     "react-dom": "16.8.6",
+    "react-ga": "^2.7.0",
     "react-helmet": "6.0.0-beta",
     "react-lottie": "^1.2.3",
     "react-markdown": "^4.2.2",
