--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -174,6 +174,7 @@
     "babel-plugin-react-transform": "3.0.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "chai": "^4.2.0",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
